@@ -82,4 +82,10 @@ ilogit2 <- function(x) { 2^(x) / (1+2^(x)) }
     digest(c(content, rownames(mat), colnames(mat)))
 }
 
-    
+getMethSignal <- function(object, type = c("Beta", "M"), ...) {
+    type <- match.arg(type)
+    switch(type,
+           "Beta" = getBeta(object, ...),
+           "M" = getM(object, ...)
+           )
+}
